<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnRince"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="0.33"
                android:backgroundTint="@color/secondary"
                android:backgroundTintMode="src_in"
                android:ellipsize="end"
                android:text="@string/btnRinceTrip"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnCreate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="0.33"
                android:backgroundTint="@color/secondary"
                android:enabled="false"
                android:text="@string/btnCreateTrip"
                android:textColor="@color/main"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/editTextValueFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/formStartTripValue"
                        android:inputType="number"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextValueTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/formToTripValue"
                        android:inputType="number"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/formFrom"
                        android:inputType="text"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/formTo"
                        android:inputType="text"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/formDesc"
                        android:inputType="text"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/formCompanyTrip" />
                </LinearLayout>

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/formTime"
                    android:inputType="time"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>