<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/btnImgList"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight=".33"
            android:background="@color/main"
            android:clickable="true"
            android:contentDescription="@string/btnlist"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/baseline_view_list_24" />

        <ImageView
            android:id="@+id/btnImgAdd"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight=".33"
            android:background="@color/main"
            android:clickable="true"
            android:contentDescription="@string/btnadd"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/baseline_add_24" />

        <ImageView
            android:id="@+id/btnImgSettings"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight=".33"
            android:background="@color/main"
            android:clickable="true"
            android:contentDescription="@string/btnsettings"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/baseline_settings_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.yournal.AddTripFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-3dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />
</androidx.constraintlayout.widget.ConstraintLayout>